# dbt-superset-lineage

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  release-please-config.json  spdx-sbom-output.spdx
.github/workflows/: generate-spdx-sbom-toml.yml  release-please.yml
dbt_superset_lineage/: __init__.py  from_superset.py  poc_delete_me  pull_dashboards.py  push_descriptions.py  push_descriptions__backup.py  push_descriptions__old.py  superset_api.py
tests/: test_dbt_superset_lineage.py  test_integration_superset_dbt_sync.py  test_unit_superset_dbt_sync.py
